Update 0-1.html image test

--- a/teaching/300/300notes/0-1.html
+++ b/teaching/300/300notes/0-1.html
@@ -29,7 +29,7 @@
 
 <div id="S0.SS1.p1" class="ltx_para">
 <div class="ltx_block ltx_minipage ltx_align_center ltx_align_middle" style="width:169.1pt;">
-<img src="images/0logic.png" id="S0.SS1.g1" class="ltx_graphics ltx_img_square" width="312" height="311" alt="A logic grid puzzle referenced below">
+<img src="0logic.png" id="S0.SS1.g1" class="ltx_graphics ltx_img_square" width="312" height="311" alt="A logic grid puzzle referenced below">
 </div>
 </div>
 <div id="S0.SS1.p2" class="ltx_para ltx_noindent">
@@ -162,7 +162,7 @@
 <div id="S0.SS1.SSS4.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">In 1976 Irme Lakatos wrote a book called <span class="ltx_text ltx_font_italic">Proofs and Refutations: The Logic of Mathematical Discovery</span>. In the book a group of students have dialogue about a concept called the Euler characteristic, which is presented as a conjecture: “for all polyhedra <math id="S0.SS1.SSS4.p1.m1" class="ltx_Math" alttext="V-E+F=2" display="inline"><mrow><mrow><mrow><mi>V</mi><mo>−</mo><mi>E</mi></mrow><mo>+</mo><mi>F</mi></mrow><mo>=</mo><mn>2</mn></mrow></math>, where <math id="S0.SS1.SSS4.p1.m2" class="ltx_Math" alttext="V" display="inline"><mi>V</mi></math> is the number of vertices, <math id="S0.SS1.SSS4.p1.m3" class="ltx_Math" alttext="E" display="inline"><mi>E</mi></math> the number of edges, and <math id="S0.SS1.SSS4.p1.m4" class="ltx_Math" alttext="F" display="inline"><mi>F</mi></math> the number of faces.” I have included a tract from Lakatos’s text in this link so you can read some of this conversation.</p>
 </div>
-<figure id="S0.SS1.SSS4.fig1" class="ltx_figure"><img src="images/qrlakatos.png" id="S0.SS1.SSS4.g1" class="ltx_graphics ltx_centering ltx_img_square" width="100" height="100" alt="QR Code for Lakatos Proof and Refutuations">
+<figure id="S0.SS1.SSS4.fig1" class="ltx_figure"><img src="qrlakatos.png" id="S0.SS1.SSS4.g1" class="ltx_graphics ltx_centering ltx_img_square" width="100" height="100" alt="QR Code for Lakatos Proof and Refutuations">
 </figure>
 <div id="S0.SS1.SSS4.p2" class="ltx_para ltx_noindent">
 <p class="ltx_p">It may surprise you that the conversation about something quite well known in mathematical circles very quickly goes off the rails. For something as well-discussed as this Euler characteristic, it is very hard to prove it to be true for <span class="ltx_text ltx_font_italic">all</span> polyhedra. In the text, the teacher presents a “proof” by showing it to be true specifically for cubes, but the students begin to pose several counterarguments. To summarize the students’ questions:</p>
