Update 0-1.html image test good. color test

--- a/teaching/300/300notes/0-1.html
+++ b/teaching/300/300notes/0-1.html
@@ -19,12 +19,12 @@
 <article class="ltx_document">
 <section id="S0" class="ltx_section">
 <h1 class="ltx_title ltx_title_section">
-<span class="ltx_tag ltx_tag_section">0 </span><span class="ltx_text" style="--ltx-fg-color:#800000;">Before the First Proof</span>
+<span class="ltx_tag ltx_tag_section">0 </span><span class="ltx_text" style="color:#800000;">Before the First Proof</span>
 </h1>
 
 <section id="S0.SS1" class="ltx_subsection">
 <h2 class="ltx_title ltx_title_subsection">
-<span class="ltx_tag ltx_tag_subsection">0.1 </span><span class="ltx_text" style="--ltx-fg-color:#800000;">Introduction to the Class</span>
+<span class="ltx_tag ltx_tag_subsection">0.1 </span><span class="ltx_text" style="color:#800000;">Introduction to the Class</span>
 </h2>
 
 <div id="S0.SS1.p1" class="ltx_para">
@@ -51,7 +51,7 @@
 </div>
 <section id="S0.SS1.SSS1" class="ltx_subsubsection">
 <h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">0.1.1 </span><span class="ltx_text" style="--ltx-fg-color:#800000;">There’s Something to Logic</span>
+<span class="ltx_tag ltx_tag_subsubsection">0.1.1 </span><span class="ltx_text" style="color:#800000;">There’s Something to Logic</span>
 </h3>
 
 <div id="S0.SS1.SSS1.p1" class="ltx_para ltx_noindent">
@@ -93,7 +93,7 @@
 </section>
 <section id="S0.SS1.SSS2" class="ltx_subsubsection">
 <h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">0.1.2 </span><span class="ltx_text" style="--ltx-fg-color:#800000;">Training in Logic</span>
+<span class="ltx_tag ltx_tag_subsubsection">0.1.2 </span><span class="ltx_text" style="color:#800000;">Training in Logic</span>
 </h3>
 
 <div id="S0.SS1.SSS2.p1" class="ltx_para ltx_noindent">
@@ -108,7 +108,7 @@
 </section>
 <section id="S0.SS1.SSS3" class="ltx_subsubsection">
 <h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">0.1.3 </span><span class="ltx_text" style="--ltx-fg-color:#800000;">Training in Logical Communication</span>
+<span class="ltx_tag ltx_tag_subsubsection">0.1.3 </span><span class="ltx_text" style="color:#800000;">Training in Logical Communication</span>
 </h3>
 
 <div id="S0.SS1.SSS3.p1" class="ltx_para ltx_noindent">
@@ -156,7 +156,7 @@
 </section>
 <section id="S0.SS1.SSS4" class="ltx_subsubsection">
 <h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">0.1.4 </span><span class="ltx_text" style="--ltx-fg-color:#800000;">Proofs and Refutations</span>
+<span class="ltx_tag ltx_tag_subsubsection">0.1.4 </span><span class="ltx_text" style="color:#800000;">Proofs and Refutations</span>
 </h3>
 
 <div id="S0.SS1.SSS4.p1" class="ltx_para ltx_noindent">
@@ -188,7 +188,7 @@
 </section>
 <section id="S0.SS1.SSS5" class="ltx_subsubsection">
 <h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">0.1.5 </span><span class="ltx_text" style="--ltx-fg-color:#800000;">Proofs and Their Structure</span>
+<span class="ltx_tag ltx_tag_subsubsection">0.1.5 </span><span class="ltx_text" style="color:#800000;">Proofs and Their Structure</span>
 </h3>
 
 <div id="S0.SS1.SSS5.p1" class="ltx_para">
@@ -196,7 +196,7 @@
 </div>
 <div id="S0.SS1.Thmtheorem1" class="ltx_theorem ltx_theorem_definition">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="--ltx-fg-color:#0000CC;">  </span> (Definition)0.1.1.</h6>
+<span class="ltx_text" style="color:#0000CC;">  </span> Definition 0.1.1.</h6>
 <div id="S0.SS1.Thmtheorem1.p1" class="ltx_para">
 <p class="ltx_p">An integer <math id="S0.SS1.Thmtheorem1.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is <span class="ltx_text ltx_font_bold">even</span> if <math id="S0.SS1.Thmtheorem1.p1.m2" class="ltx_Math" alttext="n=2k" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mn>2</mn><mo>⁢</mo><mi>k</mi></mrow></mrow></math> for some integer <math id="S0.SS1.Thmtheorem1.p1.m3" class="ltx_Math" alttext="k" display="inline"><mi>k</mi></math>.</p>
 </div>
@@ -206,7 +206,7 @@
 </div>
 <div id="S0.SS1.Thmtheorem2" class="ltx_theorem ltx_theorem_theorem">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="--ltx-fg-color:#006600;">  </span> (Theorem)0.1.2.</h6>
+<span class="ltx_text" style="color:#006600;">  </span> Theorem 0.1.2.</h6>
 <div id="S0.SS1.Thmtheorem2.p1" class="ltx_para">
 <p class="ltx_p">The sum of two even numbers is itself even.</p>
 </div>
@@ -234,7 +234,7 @@
 </div>
 <div id="S0.SS1.Thmtheorem3" class="ltx_theorem ltx_theorem_definition">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="--ltx-fg-color:#0000CC;">  </span> (Definition)0.1.3.</h6>
+<span class="ltx_text" style="color:#0000CC;">  </span> (Definition)0.1.3.</h6>
 <div id="S0.SS1.Thmtheorem3.p1" class="ltx_para">
 <p class="ltx_p">A <span class="ltx_text ltx_font_bold">proof</span> is a deductive argument that a mathematical statement is true.</p>
 </div>
@@ -284,7 +284,7 @@
 </section>
 <section id="S0.SS1.SSS6" class="ltx_subsubsection">
 <h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">0.1.6 </span><span class="ltx_text" style="--ltx-fg-color:#800000;">Structure of This Course</span>
+<span class="ltx_tag ltx_tag_subsubsection">0.1.6 </span><span class="ltx_text" style="color:#800000;">Structure of This Course</span>
 </h3>
 
 <div id="S0.SS1.SSS6.p1" class="ltx_para ltx_noindent">
@@ -325,7 +325,7 @@
 </section>
 <section id="S0.SS1.SSS7" class="ltx_subsubsection">
 <h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">0.1.7 </span><span class="ltx_text" style="--ltx-fg-color:#800000;">A Few Final Tips for Success</span>
+<span class="ltx_tag ltx_tag_subsubsection">0.1.7 </span><span class="ltx_text" style="color:#800000;">A Few Final Tips for Success</span>
 </h3>
 
 <div id="S0.SS1.SSS7.p1" class="ltx_para ltx_noindent">
