--- a/teaching/300/300notes/0-1.html
+++ b/teaching/300/300notes/0-1.html
@@ -195,8 +195,8 @@
 <p class="ltx_p">So in this course you will see things follow this pattern: “definition”, “theorem”, and “proof”. We will write our definitions very carefully so that what we say is exactly what we mean. Our very first definition will say the following:</p>
 </div>
 <div id="S0.SS1.Thmtheorem1" class="ltx_theorem ltx_theorem_definition">
-<h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#0000CC;">  </span> Definition 0.1.1.</h6>
+<h4 class="ltx_title ltx_runin ltx_title_theorem">
+<span class="ltx_text" style="color:#0000CC;"> Definition 0.1.1.</h4></span>
 <div id="S0.SS1.Thmtheorem1.p1" class="ltx_para">
 <p class="ltx_p">An integer <math id="S0.SS1.Thmtheorem1.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is <span class="ltx_text ltx_font_bold">even</span> if <math id="S0.SS1.Thmtheorem1.p1.m2" class="ltx_Math" alttext="n=2k" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mn>2</mn><mo>⁢</mo><mi>k</mi></mrow></mrow></math> for some integer <math id="S0.SS1.Thmtheorem1.p1.m3" class="ltx_Math" alttext="k" display="inline"><mi>k</mi></math>.</p>
 </div>
@@ -205,8 +205,8 @@
 <p class="ltx_p">So 2 is an even number because <math id="S0.SS1.SSS5.p2.m1" class="ltx_Math" alttext="2=2\cdot 1" display="inline"><mrow><mn>2</mn><mo>=</mo><mrow><mn>2</mn><mo lspace="0.222em" rspace="0.222em">⋅</mo><mn>1</mn></mrow></mrow></math>. The number 3 is <span class="ltx_text ltx_font_italic">not</span> even because it cannot be written as 2 times an integer. But this definition also means that <math id="S0.SS1.SSS5.p2.m2" class="ltx_Math" alttext="0" display="inline"><mn>0</mn></math> is even. It also means that <math id="S0.SS1.SSS5.p2.m3" class="ltx_Math" alttext="-2" display="inline"><mrow><mo>−</mo><mn>2</mn></mrow></math> is even. This is not the typical definition that we get for an even number before this point, but what would that definition have been anyway? These may have been “definitions by example” (an even number is a number like 2, 4, 6, 8…), which obviously won’t work for us very well! Plus, many things that we like about even numbers work with this definition:</p>
 </div>
 <div id="S0.SS1.Thmtheorem2" class="ltx_theorem ltx_theorem_theorem">
-<h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#006600;">  </span> Theorem 0.1.2.</h6>
+<h4 class="ltx_title ltx_runin ltx_title_theorem">
+<span class="ltx_text" style="color:#006600;"> Theorem 0.1.2.</h4></span>
 <div id="S0.SS1.Thmtheorem2.p1" class="ltx_para">
 <p class="ltx_p">The sum of two even numbers is itself even.</p>
 </div>
@@ -215,13 +215,13 @@
 <p class="ltx_p">How do we prove this? Here are some examples of proofs that will <span class="ltx_text ltx_font_italic">not</span> work:</p>
 </div>
 <div class="ltx_proof">
-<h6 class="ltx_title ltx_runin ltx_font_italic ltx_title_proof">“Proof” by Example.</h6>
+<h4 class="ltx_title ltx_runin ltx_font_italic ltx_title_proof">“Proof” by Example.</h4>
 <div id="S0.SS1.SSS5.p4" class="ltx_para">
 <p class="ltx_p">The sum <math id="S0.SS1.SSS5.p4.m1" class="ltx_Math" alttext="2+2" display="inline"><mrow><mn>2</mn><mo>+</mo><mn>2</mn></mrow></math> equal 4. The sum <math id="S0.SS1.SSS5.p4.m2" class="ltx_Math" alttext="4+4" display="inline"><mrow><mn>4</mn><mo>+</mo><mn>4</mn></mrow></math> equals 8. The sum <math id="S0.SS1.SSS5.p4.m3" class="ltx_Math" alttext="2+6" display="inline"><mrow><mn>2</mn><mo>+</mo><mn>6</mn></mrow></math> equals 8.∎</p>
 </div>
 </div>
 <div class="ltx_proof">
-<h6 class="ltx_title ltx_runin ltx_font_italic ltx_title_proof">“Proof” with The Wrong Definition.</h6>
+<h4 class="ltx_title ltx_runin ltx_font_italic ltx_title_proof">“Proof” with The Wrong Definition.</h4>
 <div id="S0.SS1.SSS5.p5" class="ltx_para">
 <p class="ltx_p">If we add two numbers together that end in 0, 2, 4, 6, or 8, their sum must also end in 0, 2, 4, 6, or 8. Observe: <math id="S0.SS1.SSS5.p5.m1" class="ltx_Math" alttext="0+0=0" display="inline"><mrow><mrow><mn>0</mn><mo>+</mo><mn>0</mn></mrow><mo>=</mo><mn>0</mn></mrow></math>, <math id="S0.SS1.SSS5.p5.m2" class="ltx_Math" alttext="0+2=2" display="inline"><mrow><mrow><mn>0</mn><mo>+</mo><mn>2</mn></mrow><mo>=</mo><mn>2</mn></mrow></math>, <math id="S0.SS1.SSS5.p5.m3" class="ltx_Math" alttext="0+4=4" display="inline"><mrow><mrow><mn>0</mn><mo>+</mo><mn>4</mn></mrow><mo>=</mo><mn>4</mn></mrow></math>… (and so on).∎</p>
 </div>
@@ -233,8 +233,8 @@
 <p class="ltx_p">This gives us an idea for a very important definition: the definition of <span class="ltx_text ltx_font_bold">proof</span>:</p>
 </div>
 <div id="S0.SS1.Thmtheorem3" class="ltx_theorem ltx_theorem_definition">
-<h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#0000CC;">  </span> (Definition)0.1.3.</h6>
+<h4 class="ltx_title ltx_runin ltx_title_theorem">
+<span class="ltx_text" style="color:#0000CC;"> Definition 0.1.3.</h4></span>
 <div id="S0.SS1.Thmtheorem3.p1" class="ltx_para">
 <p class="ltx_p">A <span class="ltx_text ltx_font_bold">proof</span> is a deductive argument that a mathematical statement is true.</p>
 </div>
@@ -243,7 +243,7 @@
 <p class="ltx_p">Notice the word “deductive” - this word carries a lot of weight in this definition. In the proof below we will <span class="ltx_text ltx_font_italic">deduce</span> that the sum of two even numbers is even using only the definition:</p>
 </div>
 <div class="ltx_proof">
-<h6 class="ltx_title ltx_runin ltx_font_italic ltx_title_proof">Proof that the Sum of Two Even Numbers is Even.</h6>
+<h4 class="ltx_title ltx_runin ltx_font_italic ltx_title_proof">Proof that the Sum of Two Even Numbers is Even.</h4>
 <div id="S0.SS1.SSS5.p9" class="ltx_para ltx_noindent">
 <p class="ltx_p">Let <math id="S0.SS1.SSS5.p9.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> and <math id="S0.SS1.SSS5.p9.m2" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> be two even numbers. We want to show that <math id="S0.SS1.SSS5.p9.m3" class="ltx_Math" alttext="n+m" display="inline"><mrow><mi>n</mi><mo>+</mo><mi>m</mi></mrow></math> is an even number.</p>
 </div>
