Update 5-1.html test for empty underline

--- a/teaching/300/300readings/5-1.html
+++ b/teaching/300/300readings/5-1.html
@@ -433,7 +433,7 @@ such that }x\notin B." display="block"><mrow><mrow><mi mathvariant="normal">∅<
 
 <tbody id="S5.Ex14"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
-<td class="ltx_td ltx_align_left ltx_eqn_cell"><math id="S5.Ex14.m1" class="ltx_Math" data-alttext="\displaystyle A\underline{\hskip 50.58878pt}B" display="inline"><mrow><mi>A</mi><mo>⁢</mo><munder accentunder="true"><mi></mi><mo stretchy="true">¯</mo></munder><mo>⁢</mo><mi>B</mi></mrow></math></td>
+<td class="ltx_td ltx_align_left ltx_eqn_cell"><math id="S5.Ex14.m1" class="ltx_Math" data-alttext="\displaystyle A\underline{\hskip 50.58878pt}B" display="inline"><mrow><mi>A</mi><mo>⁢</mo><munder accentunder="true"><mi></mi><span style="border-bottom: 1px solid black; display: inline-block; width: 100px"> </span></munder><mo>⁢</mo><mi>B</mi></mrow></math></td>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr></tbody>
 <tbody id="S5.Ex15"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
