Update 0-2.html with blank spaces beneath 0.2.2 and 0.2.3

--- a/teaching/300/300notes/0-2.html
+++ b/teaching/300/300notes/0-2.html
@@ -82,21 +82,9 @@
 <p class="ltx_p">If <math id="S0.SS2.Thmtheorem2.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is an even integer, then <math id="S0.SS2.Thmtheorem2.p1.m2" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math> is an even integer.</p>
 </div>
 </div>
-<div class="ltx_logical-block workbox  front"><div class="prompt">
-<div id="S1.p2" class="ltx_para sr-only">
-<p class="ltx_p"></p>
-</div>
-<div class="ltx_logical-block BigVertspace">
-</div>
-<div class="ltx_logical-block BigVertspace">
-</div>
-<div class="ltx_logical-block BigVertspace">
-</div>
-<div class="ltx_logical-block BigVertspace">
-</div>
-<div class="ltx_logical-block Vertspace">
-</div>
-</div>
+  <!-- Blank space for students to write -->
+  <div class="answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work for Theorem 0.2.2.</span>
 <div id="S0.SS2.Thmtheorem3" class="ltx_theorem ltx_theorem_theorem">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="--ltx-fg-color:#006600;">  </span> (Theorem)0.2.3.</h6>
@@ -104,6 +92,9 @@
 <p class="ltx_p">The sum of two consecutive integers is odd.</p>
 </div>
 </div>
+  <!-- Blank space for students to write -->
+  <div class="answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work for Theorem 0.2.3.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S0.SS2.SSS1.p5" class="ltx_para ltx_noindent">
 <p class="ltx_p">Notice that to prove these two theorems we had to start general. In Section 0-1 we saw that “proofs by example” don’t hold up to the standard of mathematical rigor. We need to make an argument that holds for all examples we could consider. Hence for our previous theorem, our “two consecutive integers” weren’t just two numbers we chose like “6” and “7”; they were <math id="S0.SS2.SSS1.p5.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> and <math id="S0.SS2.SSS1.p5.m2" class="ltx_Math" alttext="n+1" display="inline"><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></math> for some integer <math id="S0.SS2.SSS1.p5.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>. We could have also chosen <math id="S0.SS2.SSS1.p5.m4" class="ltx_Math" alttext="n-1" display="inline"><mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></math> and <math id="S0.SS2.SSS1.p5.m5" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> as our two consecutive integers, or even <math id="S0.SS2.SSS1.p5.m6" class="ltx_Math" alttext="n+2" display="inline"><mrow><mi>n</mi><mo>+</mo><mn>2</mn></mrow></math> and <math id="S0.SS2.SSS1.p5.m7" class="ltx_Math" alttext="n+3" display="inline"><mrow><mi>n</mi><mo>+</mo><mn>3</mn></mrow></math>, as these descriptions fit the general description of any two consecutive integers.</p>
