Update 0-2.html regular formatting

--- a/teaching/300/300notes/0-2.html
+++ b/teaching/300/300notes/0-2.html
@@ -14,7 +14,7 @@
 <article class="ltx_document">
 <section id="S0.SS2" class="ltx_subsection">
 <h2 class="ltx_title ltx_title_subsection">
-<span class="ltx_tag ltx_tag_subsection">0.2 </span><span class="ltx_text" style="--ltx-fg-color:#800000;">A Taste of Number Theory</span>
+<span class="ltx_tag ltx_tag_subsection">0.2 </span><span class="ltx_text" style="color:#800000;">A Taste of Number Theory</span>
 </h2>
 
 <div id="S0.SS2.p1" class="ltx_para ltx_noindent">
@@ -36,7 +36,7 @@
 </div>
 <section id="S0.SS2.SSS1" class="ltx_subsubsection">
 <h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">0.2.1 </span><span class="ltx_text" style="--ltx-fg-color:#800000;">Even and Odd Integers</span>
+<span class="ltx_tag ltx_tag_subsubsection">0.2.1 </span><span class="ltx_text" style="color:#800000;">Even and Odd Integers</span>
 </h3> 
 
 <div id="S0.SS2.SSS1.p1" class="ltx_para ltx_noindent">
@@ -67,7 +67,7 @@
 </div>
 <div id="S0.SS2.Thmtheorem1" class="ltx_theorem ltx_theorem_definition">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="--ltx-fg-color:#0000CC;">  </span> (Definition)0.2.1.</h6>
+<span class="ltx_text" style="color:#0000CC;">  Definition </span>0.2.1.</h6>
 <div id="S0.SS2.Thmtheorem1.p1" class="ltx_para">
 <p class="ltx_p">An integer <math id="S0.SS2.Thmtheorem1.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is <span class="ltx_text ltx_font_bold">even</span> if <math id="S0.SS2.Thmtheorem1.p1.m2" class="ltx_Math" alttext="n=2k" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mn>2</mn><mo>⁢</mo><mi>k</mi></mrow></mrow></math> for some <math id="S0.SS2.Thmtheorem1.p1.m3" class="ltx_Math" alttext="k\in\mathbb{Z}" display="inline"><mrow><mi>k</mi><mo>∈</mo><mi>ℤ</mi></mrow></math>. An integer <math id="S0.SS2.Thmtheorem1.p1.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is <span class="ltx_text ltx_font_bold">odd</span> if <math id="S0.SS2.Thmtheorem1.p1.m5" class="ltx_Math" alttext="n=2k+1" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mrow><mn>2</mn><mo>⁢</mo><mi>k</mi></mrow><mo>+</mo><mn>1</mn></mrow></mrow></math> for some <math id="S0.SS2.Thmtheorem1.p1.m6" class="ltx_Math" alttext="k\in\mathbb{Z}" display="inline"><mrow><mi>k</mi><mo>∈</mo><mi>ℤ</mi></mrow></math>.</p>
 </div>
@@ -77,7 +77,7 @@
 </div>
 <div id="S0.SS2.Thmtheorem2" class="ltx_theorem ltx_theorem_theorem">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="--ltx-fg-color:#006600;">  </span> (Theorem)0.2.2.</h6>
+<span class="ltx_text" style="color:#006600;">  Theorem</span>0.2.2.</h6>
 <div id="S0.SS2.Thmtheorem2.p1" class="ltx_para">
 <p class="ltx_p">If <math id="S0.SS2.Thmtheorem2.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is an even integer, then <math id="S0.SS2.Thmtheorem2.p1.m2" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math> is an even integer.</p>
 </div>
@@ -87,7 +87,7 @@
   <span class="sr-only">Blank space for you to write your work for Theorem 0.2.2.</span>
 <div id="S0.SS2.Thmtheorem3" class="ltx_theorem ltx_theorem_theorem">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="--ltx-fg-color:#006600;">  </span> (Theorem)0.2.3.</h6>
+<span class="ltx_text" style="color:#006600;">  Theorem</span>0.2.3.</h6>
 <div id="S0.SS2.Thmtheorem3.p1" class="ltx_para">
 <p class="ltx_p">The sum of two consecutive integers is odd.</p>
 </div>
@@ -104,7 +104,7 @@
 </div>
 <div id="S0.SS2.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="--ltx-fg-color:#800000;">  </span> (Example)0.2.4.</h6>
+<span class="ltx_text" style="color:#800000;">  Example</span>0.2.4.</h6>
 <div id="S0.SS2.Thmtheorem4.p1" class="ltx_para">
 <p class="ltx_p">Determine whether the statement below is true or false. If the statement is true, prove it. If the statement is false, provide a counterexample.</p>
 </div>
@@ -117,7 +117,7 @@
 </section>
 <section id="S0.SS2.SSS2" class="ltx_subsubsection">
 <h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">0.2.2 </span><span class="ltx_text" style="--ltx-fg-color:#800000;">Division of Integers</span>
+<span class="ltx_tag ltx_tag_subsubsection">0.2.2 </span><span class="ltx_text" style="color:#800000;">Division of Integers</span>
 </h3>
 
 <div id="S0.SS2.SSS2.p1" class="ltx_para">
@@ -125,14 +125,14 @@
 </div>
 <div id="S0.SS2.Thmtheorem5" class="ltx_theorem ltx_theorem_definition">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="--ltx-fg-color:#0000CC;">  </span> (Definition)0.2.5.</h6>
+<span class="ltx_text" style="color:#0000CC;">  Definition </span>0.2.5.</h6>
 <div id="S0.SS2.Thmtheorem5.p1" class="ltx_para">
 <p class="ltx_p">Given <math id="S0.SS2.Thmtheorem5.p1.m1" class="ltx_Math" alttext="n,m\in\mathbb{Z}" display="inline"><mrow><mrow><mi>n</mi><mo>,</mo><mi>m</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow></math>, we say that <math id="S0.SS2.Thmtheorem5.p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> <span class="ltx_text ltx_font_bold">divides</span> <math id="S0.SS2.Thmtheorem5.p1.m3" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math>, written <math id="S0.SS2.Thmtheorem5.p1.m4" class="ltx_Math" alttext="n|m" display="inline"><mrow><mi>n</mi><mo fence="false">|</mo><mi>m</mi></mrow></math>, if there exists <math id="S0.SS2.Thmtheorem5.p1.m5" class="ltx_Math" alttext="k\in\mathbb{Z}" display="inline"><mrow><mi>k</mi><mo>∈</mo><mi>ℤ</mi></mrow></math> such that <math id="S0.SS2.Thmtheorem5.p1.m6" class="ltx_Math" alttext="m=nk" display="inline"><mrow><mi>m</mi><mo>=</mo><mrow><mi>n</mi><mo>⁢</mo><mi>k</mi></mrow></mrow></math>. If <math id="S0.SS2.Thmtheorem5.p1.m7" class="ltx_Math" alttext="n|m" display="inline"><mrow><mi>n</mi><mo fence="false">|</mo><mi>m</mi></mrow></math>, we may also say that <math id="S0.SS2.Thmtheorem5.p1.m8" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> is <span class="ltx_text ltx_font_bold">divisible</span> by <math id="S0.SS2.Thmtheorem5.p1.m9" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> or that <math id="S0.SS2.Thmtheorem5.p1.m10" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is a <span class="ltx_text ltx_font_bold">factor</span> of <math id="S0.SS2.Thmtheorem5.p1.m11" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math>.</p>
 </div>
 </div>
 <div id="S0.SS2.Thmtheorem6" class="ltx_theorem ltx_theorem_theorem">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="--ltx-fg-color:#006600;">  </span> (Theorem)0.2.6.</h6>
+<span class="ltx_text" style="color:#006600;">  Theorem</span>0.2.6.</h6>
 <div id="S0.SS2.Thmtheorem6.p1" class="ltx_para">
 <p class="ltx_p">The sum of any three consecutive integers is always divisible by three.</p>
 </div>
@@ -140,7 +140,7 @@
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S0.SS2.Thmtheorem7" class="ltx_theorem ltx_theorem_example">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="--ltx-fg-color:#800000;">  </span> (Example)0.2.7.</h6>
+<span class="ltx_text" style="color:#800000;">  Example</span>0.2.7.</h6>
 <div id="S0.SS2.Thmtheorem7.p1" class="ltx_para">
 <p class="ltx_p">Determine whether the statements below are true or false. If a statement is true, prove it. If a statement is false, provide a counterexample.</p>
 </div>
@@ -163,7 +163,7 @@
 </div>
 <div id="S0.SS2.Thmtheorem8" class="ltx_theorem ltx_theorem_theorem">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="--ltx-fg-color:#006600;">  </span> (Theorem)0.2.8.</h6>
+<span class="ltx_text" style="color:#006600;">  Theorem</span>0.2.8.</h6>
 <div id="S0.SS2.Thmtheorem8.p1" class="ltx_para">
 <p class="ltx_p">If an integer is divisible by 3, then it can be written as the sum of three consecutive integers.</p>
 </div>
@@ -177,7 +177,7 @@
 </div>
 <div id="S0.SS2.Thmtheorem9" class="ltx_theorem ltx_theorem_theorem">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="--ltx-fg-color:#006600;">  </span> (Theorem)0.2.9.</h6>
+<span class="ltx_text" style="color:#006600;">  Theorem</span>0.2.9.</h6>
 <div id="S0.SS2.Thmtheorem9.p1" class="ltx_para">
 <p class="ltx_p">If <math id="S0.SS2.Thmtheorem9.p1.m1" class="ltx_Math" alttext="n\in\mathbb{Z}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℤ</mi></mrow></math> such that <math id="S0.SS2.Thmtheorem9.p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is odd, then 8 divides <math id="S0.SS2.Thmtheorem9.p1.m3" class="ltx_Math" alttext="n^{2}-1" display="inline"><mrow><msup><mi>n</mi><mn>2</mn></msup><mo>−</mo><mn>1</mn></mrow></math>.</p>
 </div>
