Update 0-2.html .answer-space success, implementing page wide

--- a/teaching/300/300notes/0-2.html
+++ b/teaching/300/300notes/0-2.html
@@ -114,6 +114,8 @@
 <p class="ltx_p">The product of an odd integer and an even integer is odd.</p>
 </blockquote>
 </div>
+<div class="answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 </section>
 <section id="S0.SS2.SSS2" class="ltx_subsubsection">
 <h3 class="ltx_title ltx_title_subsubsection">
@@ -137,6 +139,8 @@
 <p class="ltx_p">The sum of any three consecutive integers is always divisible by three.</p>
 </div>
 </div>
+<div class="answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S0.SS2.Thmtheorem7" class="ltx_theorem ltx_theorem_example">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
@@ -150,11 +154,15 @@
 <p class="ltx_p">If <math id="S0.SS2.SSS2.p2.m1" class="ltx_Math" alttext="a,n\in\mathbb{Z}" display="inline"><mrow><mrow><mi>a</mi><mo>,</mo><mi>n</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow></math> such that <math id="S0.SS2.SSS2.p2.m2" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S0.SS2.SSS2.p2.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>, then <math id="S0.SS2.SSS2.p2.m4" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S0.SS2.SSS2.p2.m5" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math>.</p>
 </blockquote>
 </div>
+<div class="answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S0.SS2.SSS2.p3" class="ltx_para ltx_noindent">
 <blockquote class="ltx_quote">
 <p class="ltx_p">If <math id="S0.SS2.SSS2.p3.m1" class="ltx_Math" alttext="a,n\in\mathbb{Z}" display="inline"><mrow><mrow><mi>a</mi><mo>,</mo><mi>n</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow></math> such that <math id="S0.SS2.SSS2.p3.m2" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S0.SS2.SSS2.p3.m3" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math>, then <math id="S0.SS2.SSS2.p3.m4" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S0.SS2.SSS2.p3.m5" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>.</p>
 </blockquote>
 </div>
+<div class="answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S0.SS2.SSS2.p4" class="ltx_para ltx_noindent">
 <p class="ltx_p">The mini-statements “<math id="S0.SS2.SSS2.p4.m1" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S0.SS2.SSS2.p4.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>” and “<math id="S0.SS2.SSS2.p4.m3" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S0.SS2.SSS2.p4.m4" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math>” are called <span class="ltx_text ltx_font_bold">predicates</span> in logic. Let’s call “<math id="S0.SS2.SSS2.p4.m5" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S0.SS2.SSS2.p4.m6" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>” Predicate 1 and “<math id="S0.SS2.SSS2.p4.m7" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S0.SS2.SSS2.p4.m8" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math>” Predicate 2. Then both statemenets written above are written in the form “If [Statement x], then [Statement y].” These are called <span class="ltx_text ltx_font_bold">conditional propositions</span>. What’s more, the second statement is the <span class="ltx_text ltx_font_bold">converse</span> of the first, as it flips the order of the two predicates.</p>
 </div>
@@ -168,6 +176,8 @@
 <p class="ltx_p">If an integer is divisible by 3, then it can be written as the sum of three consecutive integers.</p>
 </div>
 </div>
+<div class="answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S0.SS2.SSS2.p6" class="ltx_para ltx_noindent">
 <p class="ltx_p">Notice that this is the converse of Theorem 0.2.6. Even though Theorem 0.2.6 is not written using the exact “If… then…” English terms, it can be rewritten into that form using a rephrasing: “If you have the sum of three consecutive integers, then that integer is divisible by three.”</p>
 </div>
@@ -182,6 +192,8 @@
 <p class="ltx_p">If <math id="S0.SS2.Thmtheorem9.p1.m1" class="ltx_Math" alttext="n\in\mathbb{Z}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℤ</mi></mrow></math> such that <math id="S0.SS2.Thmtheorem9.p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is odd, then 8 divides <math id="S0.SS2.Thmtheorem9.p1.m3" class="ltx_Math" alttext="n^{2}-1" display="inline"><mrow><msup><mi>n</mi><mn>2</mn></msup><mo>−</mo><mn>1</mn></mrow></math>.</p>
 </div>
 </div>
+<div class="answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 </section>
 </section>
