--- a/teaching/300/300notes/0-2.html
+++ b/teaching/300/300notes/0-2.html
@@ -9,6 +9,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
+  <div class="print-footer">
+  © John Weeks 2026
+</div>
 <div class="ltx_page_main">
 <div class="ltx_page_content">
 <article class="ltx_document">
