Update 1-1.html with small-answer-space in 1.1.3

--- a/teaching/300/300notes/1-1.html
+++ b/teaching/300/300notes/1-1.html
@@ -160,7 +160,7 @@
 <div id="S1.I3.i1.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p"><math id="S1.I3.i1.p1.m1" class="ltx_Math" alttext="\neg A" display="inline"><mrow><mo rspace="0.167em">¬</mo><mi>A</mi></mrow></math></p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S1.I3.i2" class="ltx_item" style="list-style-type:none;">
@@ -168,7 +168,7 @@
 <div id="S1.I3.i2.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p"><math id="S1.I3.i2.p1.m1" class="ltx_Math" alttext="A\wedge B" display="inline"><mrow><mi>A</mi><mo>∧</mo><mi>B</mi></mrow></math></p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S1.I3.i3" class="ltx_item" style="list-style-type:none;">
@@ -176,7 +176,7 @@
 <div id="S1.I3.i3.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p"><math id="S1.I3.i3.p1.m1" class="ltx_Math" alttext="\neg A\vee B" display="inline"><mrow><mrow><mo rspace="0.167em">¬</mo><mi>A</mi></mrow><mo>∨</mo><mi>B</mi></mrow></math></p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S1.I3.i4" class="ltx_item" style="list-style-type:none;">
@@ -184,7 +184,7 @@
 <div id="S1.I3.i4.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p"><math id="S1.I3.i4.p1.m1" class="ltx_Math" alttext="\neg(\neg A\vee B)" display="inline"><mrow><mo>¬</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">¬</mo><mi>A</mi></mrow><mo>∨</mo><mi>B</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></math></p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S1.I3.i5" class="ltx_item" style="list-style-type:none;">
@@ -192,7 +192,7 @@
 <div id="S1.I3.i5.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p"><math id="S1.I3.i5.p1.m1" class="ltx_Math" alttext="A\Rightarrow B" display="inline"><mrow><mi>A</mi><mo stretchy="false">⇒</mo><mi>B</mi></mrow></math></p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S1.I3.i6" class="ltx_item" style="list-style-type:none;">
@@ -200,7 +200,7 @@
 <div id="S1.I3.i6.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p"><math id="S1.I3.i6.p1.m1" class="ltx_Math" alttext="A\Leftrightarrow B" display="inline"><mrow><mi>A</mi><mo stretchy="false">⇔</mo><mi>B</mi></mrow></math></p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 </ol>
