Update 1-2.html formatting

--- a/teaching/300/300notes/1-2.html
+++ b/teaching/300/300notes/1-2.html
@@ -151,7 +151,7 @@
 three sides of a right triangle, then <math id="S1.SS2.Thmtheorem4.p1.m5" class="ltx_Math" alttext="m=3" display="inline"><mrow><mi>m</mi><mo>=</mo><mn>3</mn></mrow></math>.</p>
 </div>
 </div>
-<div class="answer-space" aria-hidden="true"></div>
+<div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S1.SS2.Thmtheorem5" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
@@ -162,7 +162,6 @@ three sides of a right triangle, then <math id="S1.SS2.Thmtheorem4.p1.m5" class=
 </div>
 <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
 </section>
 </article>
 </div>
