--- a/teaching/300/300notes/2-1.html
+++ b/teaching/300/300notes/2-1.html
@@ -91,7 +91,7 @@
 <div id="S2.SS1.Thmtheorem3.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Using the contrapositive statement you wrote in the previous example, prove the following statement: “if <math id="S2.SS1.Thmtheorem3.p1.m1" class="ltx_Math" alttext="n\in\mathbb{Z}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℤ</mi></mrow></math> such that <math id="S2.SS1.Thmtheorem3.p1.m2" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math> is even, then <math id="S2.SS1.Thmtheorem3.p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is even.”</p>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
+  <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
 <div id="S2.SS1.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
@@ -100,7 +100,7 @@
 <div id="S2.SS1.Thmtheorem4.p1" class="ltx_para">
 <p class="ltx_p">Using the contrapositive statement you wrote in the previous example, prove the following statement: “if <math id="S2.SS1.Thmtheorem4.p1.m1" class="ltx_Math" alttext="n,m\in\mathbb{Z}" display="inline"><mrow><mrow><mi>n</mi><mo>,</mo><mi>m</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow></math> such that <math id="S2.SS1.Thmtheorem4.p1.m2" class="ltx_Math" alttext="nm" display="inline"><mrow><mi>n</mi><mo>⁢</mo><mi>m</mi></mrow></math> is even, then <math id="S2.SS1.Thmtheorem4.p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is even or <math id="S2.SS1.Thmtheorem4.p1.m4" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> is even.”</p>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
+  <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
 <div class="ltx_pagination ltx_role_newpage"></div>
@@ -141,7 +141,7 @@
 <div id="S2.SS1.Thmtheorem6.p1" class="ltx_para">
 <p class="ltx_p">Prove the statement: “The integer <math id="S2.SS1.Thmtheorem6.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is even iff <math id="S2.SS1.Thmtheorem6.p1.m2" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math> is even.”</p>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
+  <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
 <div id="S2.SS1.Thmtheorem7" class="ltx_theorem ltx_theorem_example">
@@ -150,7 +150,7 @@
 <div id="S2.SS1.Thmtheorem7.p1" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_italic">Disprove</span> the statement: “For an integer <math id="S2.SS1.Thmtheorem7.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>, the value <math id="S2.SS1.Thmtheorem7.p1.m2" class="ltx_Math" alttext="n^{2}-1" display="inline"><mrow><msup><mi>n</mi><mn>2</mn></msup><mo>−</mo><mn>1</mn></mrow></math> is even iff 4 divides <math id="S2.SS1.Thmtheorem7.p1.m3" class="ltx_Math" alttext="n^{2}-1" display="inline"><mrow><msup><mi>n</mi><mn>2</mn></msup><mo>−</mo><mn>1</mn></mrow></math>.”</p>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
+  <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
 </section>
