--- a/teaching/300/300notes/2-3.html
+++ b/teaching/300/300notes/2-3.html
@@ -114,28 +114,28 @@
 <p class="ltx_p">After having reviewed the examples on the previous page, one student decides to work on the proof overnight. Below is what they come up with. Can you find anything wrong with it? Space is given between each line so you can ask questions or clarify steps that the student makes.</p>
 <blockquote class="ltx_quote">
 <p class="ltx_p">Suppose BWOC that <math id="S2.SS3.Thmtheorem3.p1.m1" class="ltx_Math" alttext="\sqrt{2}=\frac{m}{n}" display="inline"><mrow><msqrt><mn>2</mn></msqrt><mo>=</mo><mfrac><mi>m</mi><mi>n</mi></mfrac></mrow></math> for some <math id="S2.SS3.Thmtheorem3.p1.m2" class="ltx_Math" alttext="m\in\mathbb{Z}" display="inline"><mrow><mi>m</mi><mo>∈</mo><mi>ℤ</mi></mrow></math> and <math id="S2.SS3.Thmtheorem3.p1.m3" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>. Then multiplying both sides by <math id="S2.SS3.Thmtheorem3.p1.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> yields <math id="S2.SS3.Thmtheorem3.p1.m5" class="ltx_Math" alttext="m=n\sqrt{2}" display="inline"><mrow><mi>m</mi><mo>=</mo><mrow><mi>n</mi><mo>⁢</mo><msqrt><mn>2</mn></msqrt></mrow></mrow></math>.</p>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <p class="ltx_p">Square both sides; we get <math id="S2.SS3.Thmtheorem3.p1.m6" class="ltx_Math" alttext="m^{2}=2n^{2}" display="inline"><mrow><msup><mi>m</mi><mn>2</mn></msup><mo>=</mo><mrow><mn>2</mn><mo>⁢</mo><msup><mi>n</mi><mn>2</mn></msup></mrow></mrow></math>. Call this <span class="ltx_text ltx_font_bold">Equation (1)</span>; we will return to it later.</p>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <p class="ltx_p">We conclude that <math id="S2.SS3.Thmtheorem3.p1.m7" class="ltx_Math" alttext="m^{2}" display="inline"><msup><mi>m</mi><mn>2</mn></msup></math> is even.</p>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <p class="ltx_p">We know from Section 1-1 that, if <math id="S2.SS3.Thmtheorem3.p1.m8" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> is odd, then <math id="S2.SS3.Thmtheorem3.p1.m9" class="ltx_Math" alttext="m^{2}" display="inline"><msup><mi>m</mi><mn>2</mn></msup></math> is odd. The contrapositive of this statement must also be true: since <math id="S2.SS3.Thmtheorem3.p1.m10" class="ltx_Math" alttext="m^{2}" display="inline"><msup><mi>m</mi><mn>2</mn></msup></math> is even, <math id="S2.SS3.Thmtheorem3.p1.m11" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> must be even.</p>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <p class="ltx_p">By definition of an even number, then, <math id="S2.SS3.Thmtheorem3.p1.m12" class="ltx_Math" alttext="m=2k" display="inline"><mrow><mi>m</mi><mo>=</mo><mrow><mn>2</mn><mo>⁢</mo><mi>k</mi></mrow></mrow></math> for some integer <math id="S2.SS3.Thmtheorem3.p1.m13" class="ltx_Math" alttext="k\in\mathbb{Z}" display="inline"><mrow><mi>k</mi><mo>∈</mo><mi>ℤ</mi></mrow></math>.</p>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <p class="ltx_p">We plug in <math id="S2.SS3.Thmtheorem3.p1.m14" class="ltx_Math" alttext="m=2k" display="inline"><mrow><mi>m</mi><mo>=</mo><mrow><mn>2</mn><mo>⁢</mo><mi>k</mi></mrow></mrow></math> to Equation (1). So we have that <math id="S2.SS3.Thmtheorem3.p1.m15" class="ltx_Math" alttext="(2k)^{2}=2n^{2}" display="inline"><mrow><msup><mrow><mo stretchy="false">(</mo><mrow><mn>2</mn><mo>⁢</mo><mi>k</mi></mrow><mo stretchy="false">)</mo></mrow><mn>2</mn></msup><mo>=</mo><mrow><mn>2</mn><mo>⁢</mo><msup><mi>n</mi><mn>2</mn></msup></mrow></mrow></math>, or <math id="S2.SS3.Thmtheorem3.p1.m16" class="ltx_Math" alttext="4k^{2}=2n^{2}" display="inline"><mrow><mrow><mn>4</mn><mo>⁢</mo><msup><mi>k</mi><mn>2</mn></msup></mrow><mo>=</mo><mrow><mn>2</mn><mo>⁢</mo><msup><mi>n</mi><mn>2</mn></msup></mrow></mrow></math>, or <math id="S2.SS3.Thmtheorem3.p1.m17" class="ltx_Math" alttext="2k^{2}=n^{2}" display="inline"><mrow><mrow><mn>2</mn><mo>⁢</mo><msup><mi>k</mi><mn>2</mn></msup></mrow><mo>=</mo><msup><mi>n</mi><mn>2</mn></msup></mrow></math>.</p>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <p class="ltx_p">But this means that <math id="S2.SS3.Thmtheorem3.p1.m18" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is even as well. This is a contradiction, as <math id="S2.SS3.Thmtheorem3.p1.m19" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> and <math id="S2.SS3.Thmtheorem3.p1.m20" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> can’t both be even! If they were, <math id="S2.SS3.Thmtheorem3.p1.m21" class="ltx_Math" alttext="\frac{m}{n}" display="inline"><mfrac><mi>m</mi><mi>n</mi></mfrac></math> would be an unsimplified fraction, as both <math id="S2.SS3.Thmtheorem3.p1.m22" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> and <math id="S2.SS3.Thmtheorem3.p1.m23" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> are divisible by 2! We could have started the process by simplifying the fraction so that at least one of <math id="S2.SS3.Thmtheorem3.p1.m24" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> and <math id="S2.SS3.Thmtheorem3.p1.m25" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is odd, and then we have a contradiction with the fact that both <math id="S2.SS3.Thmtheorem3.p1.m26" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> and <math id="S2.SS3.Thmtheorem3.p1.m27" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> must be even.</p>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <p class="ltx_p">The only thing we assumed was that <math id="S2.SS3.Thmtheorem3.p1.m28" class="ltx_Math" alttext="\sqrt{2}" display="inline"><msqrt><mn>2</mn></msqrt></math> was a rational number, so we are forced to conclude that <math id="S2.SS3.Thmtheorem3.p1.m29" class="ltx_Math" alttext="\sqrt{2}" display="inline"><msqrt><mn>2</mn></msqrt></math> is irrational.</p>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </blockquote>
 </div>
@@ -189,7 +189,7 @@
 <p class="ltx_p">We say that a number <math id="S2.SS3.Thmtheorem6.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> has a <span class="ltx_text ltx_font_bold">prime factorization</span> if <math id="S2.SS3.Thmtheorem6.p1.m2" class="ltx_Math" alttext="n=p_{1}p_{2}\cdot\cdots\cdot p_{n}" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>⁢</mo><msub><mi>p</mi><mn>2</mn></msub></mrow><mo lspace="0.222em" rspace="0.222em">⋅</mo><mi mathvariant="normal">⋯</mi><mo lspace="0.222em" rspace="0.222em">⋅</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></mrow></math> for prime numbers <math id="S2.SS3.Thmtheorem6.p1.m3" class="ltx_Math" alttext="p_{1},p_{2},\dots,p_{n}" display="inline"><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>,</mo><msub><mi>p</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></math> where these prime numbers can repeat. What natural numbers (other than 1) do <span class="ltx_text ltx_font_italic">not</span> have a prime factorization? Explain.</p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S2.SS3.Thmtheorem7" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
@@ -198,7 +198,7 @@
 <p class="ltx_p">We say that a number <math id="S2.SS3.Thmtheorem7.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> has a <span class="ltx_text ltx_font_bold">primitive prime factorization</span> (my definition, but it does relate to the definition of “primitive”) if <math id="S2.SS3.Thmtheorem7.p1.m2" class="ltx_Math" alttext="n=p_{1}p_{2}\cdot\cdots\cdot p_{n}" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>⁢</mo><msub><mi>p</mi><mn>2</mn></msub></mrow><mo lspace="0.222em" rspace="0.222em">⋅</mo><mi mathvariant="normal">⋯</mi><mo lspace="0.222em" rspace="0.222em">⋅</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></mrow></math> for prime number <math id="S2.SS3.Thmtheorem7.p1.m3" class="ltx_Math" alttext="p_{1},p_{2},\dots,p_{n}" display="inline"><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>,</mo><msub><mi>p</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></math> <span class="ltx_text ltx_font_italic">which do not repeat</span>. What is the largest number that has a primitive prime factorization? Explain.</p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S2.SS3.Thmtheorem8" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
@@ -207,7 +207,7 @@
 <p class="ltx_p">If your answer to the previous example were true, how many prime numbers would have to exist?</p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S2.SS3.SSS2.p2" class="ltx_para ltx_noindent">
 <p class="ltx_p">This claim that there are infinitely many prime numbers was proven about 2000 years ago by Euclid, whose texts on geometry established the criteria for rigorous proof that we still use today. Let us investigate proving this by contradiction, similar to what we did in the proof of <math id="S2.SS3.SSS2.p2.m1" class="ltx_Math" alttext="\sqrt{2}" display="inline"><msqrt><mn>2</mn></msqrt></math> being irrational.</p>
@@ -222,7 +222,7 @@
 <p class="ltx_p">For the rest of this section, assume that there are only <span class="ltx_text ltx_font_italic">finitely many</span> primes. We don’t know how many primes that would be, so let’s call it <math id="S2.SS3.Thmtheorem9.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> primes for some natural number <math id="S2.SS3.Thmtheorem9.p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>. If there were infinitely many primes, we would not be able to choose this <math id="S2.SS3.Thmtheorem9.p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>. Explain why.</p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S2.SS3.Thmtheorem10" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
@@ -231,7 +231,7 @@
 <p class="ltx_p">We also don’t know what all the primes would be (save for a few). Let’s call them <math id="S2.SS3.Thmtheorem10.p1.m1" class="ltx_Math" alttext="p_{1},p_{2},\dots,p_{n}" display="inline"><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>,</mo><msub><mi>p</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></math>, then. Given our supposition, what is the <span class="ltx_text ltx_font_italic">largest</span> number with a primitive prime factorization?</p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S2.SS3.Thmtheorem11" class="ltx_theorem ltx_theorem_example">
@@ -250,7 +250,7 @@
 <p class="ltx_p">has a <span class="ltx_text ltx_font_italic">prime</span> factorization (primitive or not!). Hint: first decide whether <math id="S2.SS3.Thmtheorem11.p1.m1" class="ltx_Math" alttext="p_{1}" display="inline"><msub><mi>p</mi><mn>1</mn></msub></math> can divide this number. Then decide whether <math id="S2.SS3.Thmtheorem11.p1.m2" class="ltx_Math" alttext="p_{2}" display="inline"><msub><mi>p</mi><mn>2</mn></msub></math> can divide this number. What primes <span class="ltx_text ltx_font_italic">can</span> divide this number?</p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S2.SS3.Thmtheorem12" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
@@ -259,7 +259,7 @@
 <p class="ltx_p">Write a formal proof of the following statement: “There are infinitely many distinct prime numbers.”</p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </section>
 </section>
