--- a/teaching/300/300notes/2-3.html
+++ b/teaching/300/300notes/2-3.html
@@ -23,7 +23,7 @@
 <li id="S2.I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S2.I1.i1.p1" class="ltx_para">
-<p class="ltx_p">Discover two or three novel proof ideas that showcase the power of the tools we have learned so far</p>
+<p class="ltx_p">Discover two novel proof ideas that showcase the power of the tools we have learned so far</p>
 </div>
 </li>
 <li id="S2.I1.i2" class="ltx_item" style="list-style-type:none;">
@@ -54,7 +54,9 @@
 <div id="S2.SS3.SSS1.p2" class="ltx_para ltx_noindent">
 <p class="ltx_p">If we are constructing a 45-degree diagonal wall, we are implicitly using the value <math id="S2.SS3.SSS1.p2.m1" class="ltx_Math" alttext="\sqrt{2}" display="inline"><msqrt><mn>2</mn></msqrt></math>.</p>
 </div>
-
+<div id="S2.SS3.SSS1.p3" class="ltx_para">
+<span class="ltx_inline-block"><svg id="S2.SS3.SSS1.pic1" class="ltx_picture ltx_centering" height="117.4" overflow="visible" version="1.1" viewBox="0 0 115.4 117.4" width="115.4"><g style="--ltx-stroke-color:#000000;--ltx-fill-color:#000000;" transform="translate(0,117.4) matrix(1 0 0 -1 0 0) translate(16.42,0) translate(0,18.42)" fill="#000000" stroke="#000000" stroke-width="0.4pt"><g style="--ltx-stroke-color:#808080;--ltx-fill-color:#808080;" stroke="#808080" fill="#808080"><path style="fill:none" d="M 0 0 L 0 98.43 L 98.43 98.43 L 98.43 0 Z"></path></g><g stroke-width="0.8pt"><path style="fill:none" d="M 0 0 L 0 98.43 L 98.43 0 Z"></path></g><g style="--ltx-stroke-color:#000000;--ltx-fill-color:#000000;" transform="matrix(1.0 0.0 0.0 1.0 66.13 65.13)" fill="#000000" stroke="#000000"><foreignObject style="--fo_width :0.5em;--fo_height:0.64em;--fo_depth :0em;" width="6.92" height="8.92" transform="matrix(1 0 0 -1 0 8.92)" overflow="visible"><span class="ltx_foreignobject_container"><span class="ltx_foreignobject_content"><math id="S2.SS3.SSS1.pic1.m1" class="ltx_Math" alttext="\sqrt{2}" display="inline"><msqrt><mn>2</mn></msqrt></math></span></span></foreignObject></g><g style="--ltx-stroke-color:#000000;--ltx-fill-color:#000000;" transform="matrix(1.0 0.0 0.0 1.0 45.75 -13.81)" fill="#000000" stroke="#000000"><foreignObject style="--fo_width :0.5em;--fo_height:0.64em;--fo_depth :0em;" width="6.92" height="8.92" transform="matrix(1 0 0 -1 0 8.92)" overflow="visible"><span class="ltx_foreignobject_container"><span class="ltx_foreignobject_content"><math id="S2.SS3.SSS1.pic1.m2" class="ltx_Math" alttext="1" display="inline"><mn>1</mn></math></span></span></foreignObject></g><g style="--ltx-stroke-color:#000000;--ltx-fill-color:#000000;" transform="matrix(1.0 0.0 0.0 1.0 -11.81 44.75)" fill="#000000" stroke="#000000"><foreignObject style="--fo_width :0.5em;--fo_height:0.64em;--fo_depth :0em;" width="6.92" height="8.92" transform="matrix(1 0 0 -1 0 8.92)" overflow="visible"><span class="ltx_foreignobject_container"><span class="ltx_foreignobject_content"><math id="S2.SS3.SSS1.pic1.m3" class="ltx_Math" alttext="1" display="inline"><mn>1</mn></math></span></span></foreignObject></g></g></svg></span>
+</div>
 <div id="S2.SS3.SSS1.p4" class="ltx_para ltx_noindent">
 <p class="ltx_p">However, the fact that this number is <span class="ltx_text ltx_font_bold">irrational</span> (cannot be written as a ratio of integers) is widely credited to Hippassus of Metapontum (flourished c. 500 BCE).</p>
 </div>
