--- a/teaching/300/300notes/2-4.html
+++ b/teaching/300/300notes/2-4.html
@@ -217,7 +217,7 @@
 <p class="ltx_p">Consider what you would have to show to <span class="ltx_text ltx_font_italic">disprove</span> the statement: <math id="S2.SS4.Thmtheorem6.p1.m1" class="ltx_Math" alttext="(\forall x\in\mathbb{Z})(\forall y\in\mathbb{Z})x+y=0" display="inline"><mrow><mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∀</mo><mi>x</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∀</mo><mi>y</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mi>y</mi></mrow><mo>=</mo><mn>0</mn></mrow></math>. Write down your idea of a proof below.</p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S2.SS4.Thmtheorem7" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
@@ -226,7 +226,7 @@
 <p class="ltx_p">Consider what you would have to show to <span class="ltx_text ltx_font_italic">disprove</span> the statement: <math id="S2.SS4.Thmtheorem7.p1.m1" class="ltx_Math" alttext="(\exists x\in\mathbb{Z})(\forall y\in\mathbb{Z})x+y=0" display="inline"><mrow><mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∃</mo><mi>x</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∀</mo><mi>y</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mi>y</mi></mrow><mo>=</mo><mn>0</mn></mrow></math>. Write down your idea of a proof below.</p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S2.SS4.SSS3.p1" class="ltx_para ltx_noindent">
@@ -298,7 +298,7 @@
 <div id="S2.I6.ix1.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">For all <math id="S2.I6.ix1.p1.m1" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>, <math id="S2.I6.ix1.p1.m2" class="ltx_Math" alttext="n^{2}\geq 5" display="inline"><mrow><msup><mi>n</mi><mn>2</mn></msup><mo>≥</mo><mn>5</mn></mrow></math>.</p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S2.I6.ix2" class="ltx_item" style="list-style-type:none;">
@@ -306,7 +306,7 @@
 <div id="S2.I6.ix2.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">For all <math id="S2.I6.ix2.p1.m1" class="ltx_Math" alttext="n\in\mathbb{Z}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℤ</mi></mrow></math>, there exists <math id="S2.I6.ix2.p1.m2" class="ltx_Math" alttext="m\in\mathbb{Z}" display="inline"><mrow><mi>m</mi><mo>∈</mo><mi>ℤ</mi></mrow></math> such that <math id="S2.I6.ix2.p1.m3" class="ltx_Math" alttext="n+m=0" display="inline"><mrow><mrow><mi>n</mi><mo>+</mo><mi>m</mi></mrow><mo>=</mo><mn>0</mn></mrow></math>.</p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S2.I6.ix3" class="ltx_item" style="list-style-type:none;">
@@ -314,7 +314,7 @@
 <div id="S2.I6.ix3.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p"><math id="S2.I6.ix3.p1.m1" class="ltx_math_unparsed" alttext="(\forall x,y,z\in\mathbb{Z})((xy" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mo rspace="0.167em">∀</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo>,</mo><mi>z</mi><mo>∈</mo><mi>ℤ</mi><mo stretchy="false">)</mo></mrow><mrow><mo stretchy="false">(</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mi>y</mi></mrow></mrow></mrow></math> is even <math id="S2.I6.ix3.p1.m2" class="ltx_Math" alttext="\wedge\,yz" display="inline"><mrow><mo rspace="0em">∧</mo><mrow><mi>y</mi><mo>⁢</mo><mi>z</mi></mrow></mrow></math> is even<math id="S2.I6.ix3.p1.m3" class="ltx_math_unparsed" alttext=")\Rightarrow xz" display="inline"><mrow><mo stretchy="false">)</mo><mo stretchy="false">⇒</mo><mi>x</mi><mi>z</mi></mrow></math> is even<math id="S2.I6.ix3.p1.m4" class="ltx_Math" alttext=")" display="inline"><mo stretchy="false">)</mo></math></p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 </ol>
