--- a/teaching/300/300notes/2-4.html
+++ b/teaching/300/300notes/2-4.html
@@ -63,7 +63,7 @@
 <div id="S2.SS4.Thmtheorem1.p4" class="ltx_para ltx_noindent">
 <p class="ltx_p">(3) <math id="S2.SS4.Thmtheorem1.p4.m1" class="ltx_Math" alttext="2&lt;b" display="inline"><mrow><mn>2</mn><mo>&lt;</mo><mi>b</mi></mrow></math>.</p>
 </div>
-<div id="S2.SS4.Thmtheorem1.p5" class="ltx_para">
+<div id="S2.SS4.Thmtheorem1.p5" class="ltx_para ltx_noindent">
 <p class="ltx_p">(4) There exists an integer <math id="S2.SS4.Thmtheorem1.p5.m1" class="ltx_Math" alttext="b" display="inline"><mi>b</mi></math> such that <math id="S2.SS4.Thmtheorem1.p5.m2" class="ltx_Math" alttext="2&lt;b" display="inline"><mrow><mn>2</mn><mo>&lt;</mo><mi>b</mi></mrow></math>.</p>
 </div>
 </div>
@@ -314,7 +314,7 @@
 <div id="S2.I6.ix3.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p"><math id="S2.I6.ix3.p1.m1" class="ltx_math_unparsed" alttext="(\forall x,y,z\in\mathbb{Z})((xy" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mo rspace="0.167em">∀</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo>,</mo><mi>z</mi><mo>∈</mo><mi>ℤ</mi><mo stretchy="false">)</mo></mrow><mrow><mo stretchy="false">(</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mi>y</mi></mrow></mrow></mrow></math> is even <math id="S2.I6.ix3.p1.m2" class="ltx_Math" alttext="\wedge\,yz" display="inline"><mrow><mo rspace="0em">∧</mo><mrow><mi>y</mi><mo>⁢</mo><mi>z</mi></mrow></mrow></math> is even<math id="S2.I6.ix3.p1.m3" class="ltx_math_unparsed" alttext=")\Rightarrow xz" display="inline"><mrow><mo stretchy="false">)</mo><mo stretchy="false">⇒</mo><mi>x</mi><mi>z</mi></mrow></math> is even<math id="S2.I6.ix3.p1.m4" class="ltx_Math" alttext=")" display="inline"><mo stretchy="false">)</mo></math></p>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
+  <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 </ol>
