--- a/teaching/300/300notes/4-1.html
+++ b/teaching/300/300notes/4-1.html
@@ -495,6 +495,7 @@
 </div>
 </div>
 </div>
+  <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S4.SS1.Thmtheorem13" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>4.1.13.</h3>
@@ -519,7 +520,6 @@
 </div>
   <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S4.SS1.SSS1.p14" class="ltx_para">
 <p class="ltx_p">To prove two sets <math id="S4.SS1.SSS1.p14.m1" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> and <math id="S4.SS1.SSS1.p14.m2" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math> are equal, we must show that <span class="ltx_text ltx_font_italic">each set is a subset of the other</span>. We will prove this using the following two-step process:</p>
 <ol id="S4.I7" class="ltx_enumerate">
@@ -546,7 +546,8 @@
 </div>
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div id="S4.SS1.Thmtheorem15" class="ltx_theorem ltx_theorem_example">
+<div class="ltx_pagination ltx_role_newpage"></div>
+  <div id="S4.SS1.Thmtheorem15" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>4.1.15.</h3>
 <div id="S4.SS1.Thmtheorem15.p1" class="ltx_para">
@@ -563,7 +564,7 @@
 <p class="ltx_p">Either set can be used in the definition of the <span class="ltx_text ltx_font_bold">rational numbers</span> <math id="S4.SS1.Thmtheorem15.p1.m1" class="ltx_Math" alttext="\mathbb{Q}" display="inline"><mi>ℚ</mi></math>.</p>
 </div>
 </div>
-<div class="large-answer-space" aria-hidden="true"></div>
+<div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </section>
 </section>
