Update 5-1.html for pages

--- a/teaching/300/300notes/5-1.html
+++ b/teaching/300/300notes/5-1.html
@@ -74,6 +74,7 @@
 </div>
   <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
+<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S5.SS1.Thmtheorem2" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>5.1.2.</h3>
@@ -85,7 +86,6 @@
 </div>
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S5.SS1.Thmtheorem2.p3" class="ltx_para ltx_noindent">
 <p class="ltx_p">Say the company wants to make a “reverse lookup” feature that helps find a username associated with a given email. Given your answer to the previous question, what is a potential problem with this? What condition would need to be true about the origianl function <math id="S5.SS1.Thmtheorem2.p3.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> to guarantee the reverse lookup is unambiguous?</p>
 </div>
@@ -105,6 +105,9 @@
 <p class="ltx_p">We have already seen as well how functions can describe entire business processes. Our society survives based on the power of the functions it exploits. As mathematicians it behooves us to be very knowledgeable about how to use functions.</p>
 </div>
 </section>
+<div class="ltx_para ltx_noindent">
+  <p class="ltx_p">Moving forward we need a strong understanding of functions, and we will take our time seeing how functions, numbers, and sets all interact with one another. The goal of functions is to grasp the concepts of calculus! This content will be assumed in MATH-409, with perhaps only one or two days given for review.</p>
+</div>
 <section id="S5.SS1.SSS2" class="ltx_subsubsection">
 <h4 class="ltx_title ltx_title_subsubsection">
 <span class="ltx_tag ltx_tag_subsubsection">5.1.2 </span><span class="ltx_text" style="color:#800000;">Well-Defined Functions</span>
@@ -212,8 +215,6 @@
 <div id="S5.I2.ix4.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Define <math id="S5.I2.ix4.p1.m1" class="ltx_Math" alttext="s:\mathbb{Q}\rightarrow\mathbb{Z}" display="inline"><mrow><mi>s</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>ℚ</mi><mo stretchy="false">→</mo><mi>ℤ</mi></mrow></mrow></math> via <math id="S5.I2.ix4.p1.m2" class="ltx_Math" alttext="s(a/b)=a+b" display="inline"><mrow><mrow><mi>s</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mi>a</mi><mo>/</mo><mi>b</mi></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>a</mi><mo>+</mo><mi>b</mi></mrow></mrow></math>.</p>
 </div>
-  <div class="tiny-answer-space" aria-hidden="true"></div>
-  <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 </ol>
 </div>
